# pulsenode

./: .gitignore  AGENTS.md  README.md  coverage.toml  coverage.xml  demo_session_memory.py  demo_tool_system.py  pyproject.toml  run_tests.py
docs/: SESSION_MEMORY_IMPLEMENTATION.md
scripts/: generate_token.py
src/pulsenode/agent/: agent_config.py  llm_mcp.py  loader.py  main.py  memory.py  models.py  sessions.py  simple_tools.py  tools.py
src/pulsenode/agent/channels/: __init__.py  file_channel.py
src/pulsenode/agent/tools/: __init__.py  http.py
src/pulsenode/agent/tools/parsers/: __init__.py  base.py  openai.py
src/pulsenode/config/: __init__.py  mcp_server.py  settings.py
src/pulsenode/mcp/: __init__.py
src/pulsenode/mcp/clients/: __init__.py  llamacpp_client.py  main.py  ollama_client.py
src/pulsenode/mcp/servers/: __init__.py  llm_proxy.py  main.py
tests/: README.md  __init__.py  conftest.py
tests/integration/: conftest.py  test_integration.py
tests/integration/agent/: test_llm_mcp_integration.py
tests/integration/mcp/: test_http_api.py  test_protocol.py
tests/unit/agent/: __init__.py  test_llm_mcp.py  test_loader.py  test_main.py  test_session_memory.py
tests/unit/agent/channels/: test_file_channel.py
tests/unit/agent/tools/: test_http_tool.py
tests/unit/mcp/clients/: __init__.py  test_llamacpp_client.py  test_ollama_client.py
tests/unit/mcp/servers/: __init__.py  test_llm_proxy.py
tests/unit/tools/: __init__.py  test_config.py
