[project]
name = "pulsenode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tom Faulkner", email = "faulkner@pm.me" }
]
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=2.14.4",
    "httpx>=0.28.1",
    "structlog>=25.5.0",
]

[project.scripts]
pulsenode = "pulsenode:main"

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]
